--- a/account_menu/i18n/hr.po
+++ b/account_menu/i18n/hr.po
@@ -6,95 +6,96 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 14.0\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2021-09-13 13:33+0000\n"
-"Last-Translator: Pedro Castro Silva <pedrocs@exo.pt>\n"
+"PO-Revision-Date: 2022-08-22 21:07+0000\n"
+"Last-Translator: Bole <bole@dajmi5.com>\n"
 "Language-Team: none\n"
-"Language: pt\n"
+"Language: hr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
-"Plural-Forms: nplurals=2; plural=n > 1;\n"
+"Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
+"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Generator: Weblate 4.3.2\n"
 
 #. module: account_menu
 #: model:ir.model,name:account_menu.model_account_group
 msgid "Account Group"
-msgstr "Grupo de Contas"
+msgstr "Grupa konta"
 
 #. module: account_menu
 #: model:ir.actions.act_window,name:account_menu.account_group_action
 #: model:ir.ui.menu,name:account_menu.account_group_menu
 msgid "Account Groups"
-msgstr "Grupos de Contas"
+msgstr "Grupe konta"
 
 #. module: account_menu
 #: model:ir.model,name:account_menu.model_account_account_tag
 msgid "Account Tag"
-msgstr "Etiqueta de Conta"
+msgstr "Oznake konta"
 
 #. module: account_menu
 #: model:ir.actions.act_window,name:account_menu.account_account_tag_action
 #: model:ir.ui.menu,name:account_menu.account_tag_menu
 msgid "Account Tags"
-msgstr "Etiquetas de Contas"
+msgstr "Oznake konta"
 
 #. module: account_menu
 #: model_terms:ir.ui.view,arch_db:account_menu.view_account_tax_group_form
 #: model_terms:ir.ui.view,arch_db:account_menu.view_account_tax_group_search
 msgid "Account Tax Group"
-msgstr "Grupo de Impostos"
+msgstr "Grupa poreza"
 
 #. module: account_menu
 #: model_terms:ir.ui.view,arch_db:account_menu.view_account_tax_group_search
 msgid "Account Tax Groups"
-msgstr "Grupos de Impostos"
+msgstr "Grupe poreza"
 
 #. module: account_menu
 #: model:ir.actions.act_window,name:account_menu.account_account_template_action
 #: model:ir.ui.menu,name:account_menu.menu_account_account_template
 msgid "Account Templates"
-msgstr "Modelos de Conta"
+msgstr "Predlošci konta"
 
 #. module: account_menu
 #: model:ir.ui.menu,name:account_menu.account_type_menu
 msgid "Account Types"
-msgstr "Tipos de Conta"
+msgstr "Tipovi konta"
 
 #. module: account_menu
 #: model:ir.model.fields,field_description:account_menu.field_account_account_tag__account_ids
 #: model:ir.model.fields,field_description:account_menu.field_account_group__account_ids
 msgid "Accounts"
-msgstr "Contas"
+msgstr "Konta"
 
 #. module: account_menu
 #: model_terms:ir.ui.view,arch_db:account_menu.res_config_settings_view_form
 msgid "Anglo-Saxon Accounting"
-msgstr "Contabilidade Anglo-Saxónica"
+msgstr "Anglo-Saxonsko računovodstvo"
 
 #. module: account_menu
 #: model:ir.ui.menu,name:account_menu.menu_accounting_statement_bank
 msgid "Bank Statements"
-msgstr "Extratos Bancários"
+msgstr "Izvodi banke"
 
 #. module: account_menu
 #: model:ir.ui.menu,name:account_menu.menu_accounting_bank_and_cash
 msgid "Bank and Cash"
-msgstr "Bancos e Caixa"
+msgstr "Banka i gotovina"
 
 #. module: account_menu
 #: model:ir.ui.menu,name:account_menu.menu_accounting_statement_cash
 msgid "Cash Registers"
-msgstr "Registos de Caixa"
+msgstr "Blagajne"
 
 #. module: account_menu
 #: model:ir.ui.menu,name:account_menu.menu_account_chart_template
 msgid "Chart of Accounts Templates"
-msgstr "Modelos de Plano de Contas"
+msgstr "Predlošci kontnih planova"
 
 #. module: account_menu
 #: model:ir.model,name:account_menu.model_res_config_settings
 msgid "Config Settings"
-msgstr "Parâmetros de Configuração"
+msgstr "Postavke"
 
 #. module: account_menu
 #: model:ir.model.fields,field_description:account_menu.field_account_account_tag__display_name
@@ -102,13 +103,13 @@ msgstr "Parâmetros de Configuração"
 #: model:ir.model.fields,field_description:account_menu.field_account_tax_group__display_name
 #: model:ir.model.fields,field_description:account_menu.field_res_config_settings__display_name
 msgid "Display Name"
-msgstr "Nome a Exibir"
+msgstr "Prikazani naziv"
 
 #. module: account_menu
 #: model:ir.actions.act_window,name:account_menu.account_fiscal_position_template_action
 #: model:ir.ui.menu,name:account_menu.menu_account_fiscal_position_template
 msgid "Fiscal Position Templates"
-msgstr "Modelos de Posições Fiscais"
+msgstr "Predlošci fiskalnih pozicija"
 
 #. module: account_menu
 #: model:ir.model.fields,field_description:account_menu.field_account_account_tag__id
@@ -124,7 +125,7 @@ msgstr "ID"
 #: model:ir.model.fields,field_description:account_menu.field_account_tax_group____last_update
 #: model:ir.model.fields,field_description:account_menu.field_res_config_settings____last_update
 msgid "Last Modified on"
-msgstr "Última Modificação em"
+msgstr ""
 
 #. module: account_menu
 #: model_terms:ir.ui.view,arch_db:account_menu.res_config_settings_view_form
@@ -134,9 +135,6 @@ msgid ""
 "recording the cost as soon\n"
 "                                as the product is received in stock)."
 msgstr ""
-"Registar o custo de um bem como despesa quando este bem\n"
-"é faturado ao cliente final (em vez de o registar assim\n"
-"que o produto é recebido em stock)."
 
 #. module: account_menu
 #: model:ir.model.fields,help:account_menu.field_res_config_settings__anglo_saxon_accounting
@@ -144,8 +142,6 @@ msgid ""
 "Record the cost of a good as an expense when this good is invoiced to a "
 "final customer."
 msgstr ""
-"Registar o custo de um bem como despesa quando este é faturado ao cliente "
-"final."
 
 #. module: account_menu
 #: model_terms:ir.ui.view,arch_db:account_menu.view_account_tax_group_search
@@ -155,30 +151,30 @@ msgstr ""
 #. module: account_menu
 #: model:ir.model,name:account_menu.model_account_tax_group
 msgid "Tax Group"
-msgstr "Grupo de Imposto"
+msgstr "Grupa poreza"
 
 #. module: account_menu
 #: model:ir.actions.act_window,name:account_menu.action_account_tax_group
 #: model:ir.ui.menu,name:account_menu.account_tax_group_menu
 msgid "Tax Groups"
-msgstr ""
+msgstr "Grupe poreza"
 
 #. module: account_menu
 #: model:ir.ui.menu,name:account_menu.menu_account_tax_template
 msgid "Tax Templates"
-msgstr "Modelos de Imposto"
+msgstr "Predlošci poreza"
 
 #. module: account_menu
 #: model:ir.model.fields,field_description:account_menu.field_account_tax_group__tax_ids
 msgid "Taxes"
-msgstr "Impostos"
+msgstr "Porezi"
 
 #. module: account_menu
 #: model:ir.ui.menu,name:account_menu.menu_account_coa_settings
 msgid "Templates"
-msgstr "Modelos"
+msgstr "Predlošci"
 
 #. module: account_menu
 #: model:ir.model.fields,field_description:account_menu.field_res_config_settings__anglo_saxon_accounting
 msgid "Use anglo-saxon accounting"
-msgstr "Utilizar contabilidade anglo-saxónica"
+msgstr ""
