--- a/account_menu/i18n/sl.po
+++ b/account_menu/i18n/sl.po
@@ -6,95 +6,96 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 14.0\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2021-09-13 13:33+0000\n"
-"Last-Translator: Pedro Castro Silva <pedrocs@exo.pt>\n"
+"PO-Revision-Date: 2023-03-30 12:22+0000\n"
+"Last-Translator: Matjaz Mozetic <matjaz@luxim.si>\n"
 "Language-Team: none\n"
-"Language: pt\n"
+"Language: sl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
-"Plural-Forms: nplurals=2; plural=n > 1;\n"
-"X-Generator: Weblate 4.3.2\n"
+"Plural-Forms: nplurals=4; plural=n%100==1 ? 0 : n%100==2 ? 1 : n%100==3 || n"
+"%100==4 ? 2 : 3;\n"
+"X-Generator: Weblate 4.14.1\n"
 
 #. module: account_menu
 #: model:ir.model,name:account_menu.model_account_group
 msgid "Account Group"
-msgstr "Grupo de Contas"
+msgstr "Skupina kontov"
 
 #. module: account_menu
 #: model:ir.actions.act_window,name:account_menu.account_group_action
 #: model:ir.ui.menu,name:account_menu.account_group_menu
 msgid "Account Groups"
-msgstr "Grupos de Contas"
+msgstr "Skupine kontov"
 
 #. module: account_menu
 #: model:ir.model,name:account_menu.model_account_account_tag
 msgid "Account Tag"
-msgstr "Etiqueta de Conta"
+msgstr "Oznaka konta"
 
 #. module: account_menu
 #: model:ir.actions.act_window,name:account_menu.account_account_tag_action
 #: model:ir.ui.menu,name:account_menu.account_tag_menu
 msgid "Account Tags"
-msgstr "Etiquetas de Contas"
+msgstr "Oznake kontov"
 
 #. module: account_menu
 #: model_terms:ir.ui.view,arch_db:account_menu.view_account_tax_group_form
 #: model_terms:ir.ui.view,arch_db:account_menu.view_account_tax_group_search
 msgid "Account Tax Group"
-msgstr "Grupo de Impostos"
+msgstr "Skupina davkov"
 
 #. module: account_menu
 #: model_terms:ir.ui.view,arch_db:account_menu.view_account_tax_group_search
 msgid "Account Tax Groups"
-msgstr "Grupos de Impostos"
+msgstr "Skupine davkov"
 
 #. module: account_menu
 #: model:ir.actions.act_window,name:account_menu.account_account_template_action
 #: model:ir.ui.menu,name:account_menu.menu_account_account_template
 msgid "Account Templates"
-msgstr "Modelos de Conta"
+msgstr "Predloge kontov"
 
 #. module: account_menu
 #: model:ir.ui.menu,name:account_menu.account_type_menu
 msgid "Account Types"
-msgstr "Tipos de Conta"
+msgstr "Tipi kontov"
 
 #. module: account_menu
 #: model:ir.model.fields,field_description:account_menu.field_account_account_tag__account_ids
 #: model:ir.model.fields,field_description:account_menu.field_account_group__account_ids
 msgid "Accounts"
-msgstr "Contas"
+msgstr "Konti"
 
 #. module: account_menu
 #: model_terms:ir.ui.view,arch_db:account_menu.res_config_settings_view_form
 msgid "Anglo-Saxon Accounting"
-msgstr "Contabilidade Anglo-Saxónica"
+msgstr "Anglosaško računovodstvo"
 
 #. module: account_menu
 #: model:ir.ui.menu,name:account_menu.menu_accounting_statement_bank
 msgid "Bank Statements"
-msgstr "Extratos Bancários"
+msgstr "Bančni izpiski"
 
 #. module: account_menu
 #: model:ir.ui.menu,name:account_menu.menu_accounting_bank_and_cash
 msgid "Bank and Cash"
-msgstr "Bancos e Caixa"
+msgstr "Banka in gotovina"
 
 #. module: account_menu
 #: model:ir.ui.menu,name:account_menu.menu_accounting_statement_cash
 msgid "Cash Registers"
-msgstr "Registos de Caixa"
+msgstr "Blagajne"
 
 #. module: account_menu
 #: model:ir.ui.menu,name:account_menu.menu_account_chart_template
 msgid "Chart of Accounts Templates"
-msgstr "Modelos de Plano de Contas"
+msgstr "Predloge kontnega plana"
 
 #. module: account_menu
 #: model:ir.model,name:account_menu.model_res_config_settings
 msgid "Config Settings"
-msgstr "Parâmetros de Configuração"
+msgstr "Uredi nastavitve"
 
 #. module: account_menu
 #: model:ir.model.fields,field_description:account_menu.field_account_account_tag__display_name
@@ -102,13 +103,13 @@ msgstr "Parâmetros de Configuração"
 #: model:ir.model.fields,field_description:account_menu.field_account_tax_group__display_name
 #: model:ir.model.fields,field_description:account_menu.field_res_config_settings__display_name
 msgid "Display Name"
-msgstr "Nome a Exibir"
+msgstr "Prikazani naziv"
 
 #. module: account_menu
 #: model:ir.actions.act_window,name:account_menu.account_fiscal_position_template_action
 #: model:ir.ui.menu,name:account_menu.menu_account_fiscal_position_template
 msgid "Fiscal Position Templates"
-msgstr "Modelos de Posições Fiscais"
+msgstr "Predloge fiskalnih pozicij"
 
 #. module: account_menu
 #: model:ir.model.fields,field_description:account_menu.field_account_account_tag__id
@@ -124,7 +125,7 @@ msgstr "ID"
 #: model:ir.model.fields,field_description:account_menu.field_account_tax_group____last_update
 #: model:ir.model.fields,field_description:account_menu.field_res_config_settings____last_update
 msgid "Last Modified on"
-msgstr "Última Modificação em"
+msgstr "Zadnjič spremenjeno"
 
 #. module: account_menu
 #: model_terms:ir.ui.view,arch_db:account_menu.res_config_settings_view_form
@@ -134,9 +135,10 @@ msgid ""
 "recording the cost as soon\n"
 "                                as the product is received in stock)."
 msgstr ""
-"Registar o custo de um bem como despesa quando este bem\n"
-"é faturado ao cliente final (em vez de o registar assim\n"
-"que o produto é recebido em stock)."
+"Vknjiži strošek prodanega blaga kot strošek, potem ko\n"
+"                                se zaračuna končnemu kupcu (namesto takoj ob "
+"prejemu\n"
+"                                proizvoda v zaloge)."
 
 #. module: account_menu
 #: model:ir.model.fields,help:account_menu.field_res_config_settings__anglo_saxon_accounting
@@ -144,41 +146,40 @@ msgid ""
 "Record the cost of a good as an expense when this good is invoiced to a "
 "final customer."
 msgstr ""
-"Registar o custo de um bem como despesa quando este é faturado ao cliente "
-"final."
+"Vknjiži strošek prodanega blaga potem, ko se blago zaračuna končnemu kupcu."
 
 #. module: account_menu
 #: model_terms:ir.ui.view,arch_db:account_menu.view_account_tax_group_search
 msgid "Sequence"
-msgstr ""
+msgstr "Zaporedje"
 
 #. module: account_menu
 #: model:ir.model,name:account_menu.model_account_tax_group
 msgid "Tax Group"
-msgstr "Grupo de Imposto"
+msgstr "Davčna skupina"
 
 #. module: account_menu
 #: model:ir.actions.act_window,name:account_menu.action_account_tax_group
 #: model:ir.ui.menu,name:account_menu.account_tax_group_menu
 msgid "Tax Groups"
-msgstr ""
+msgstr "Davčne skupine"
 
 #. module: account_menu
 #: model:ir.ui.menu,name:account_menu.menu_account_tax_template
 msgid "Tax Templates"
-msgstr "Modelos de Imposto"
+msgstr "Predloge davkov"
 
 #. module: account_menu
 #: model:ir.model.fields,field_description:account_menu.field_account_tax_group__tax_ids
 msgid "Taxes"
-msgstr "Impostos"
+msgstr "Davki"
 
 #. module: account_menu
 #: model:ir.ui.menu,name:account_menu.menu_account_coa_settings
 msgid "Templates"
-msgstr "Modelos"
+msgstr "Predloge"
 
 #. module: account_menu
 #: model:ir.model.fields,field_description:account_menu.field_res_config_settings__anglo_saxon_accounting
 msgid "Use anglo-saxon accounting"
-msgstr "Utilizar contabilidade anglo-saxónica"
+msgstr "Uporabi anglosaško računovodstvo"
